# ebbingcontext

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  deploy-demo.yml  publish.yml
benchmarks/: README.md  locomo_eval.py
demo/: index.html  package-lock.json  package.json  server.py  vite.config.js
demo/src/: App.jsx
docs/: api.md  config.md
ebbingcontext/: __init__.py  cli.py  config.py  config.yaml  engine.py  models.py
ebbingcontext/adapter/: base.py  openai_adapter.py  token_counter.py
ebbingcontext/core/: chunker.py  classifier.py  cold_start.py  conflict.py  decay.py  migration.py  scoring.py
ebbingcontext/embedding/: __init__.py  base.py  bge.py  lite.py  openai_embed.py
ebbingcontext/interface/: mcp_server.py  tools.py
ebbingcontext/prompt/: assembler.py
ebbingcontext/prompt/templates/: code_assistant.yaml  customer_support.yaml  general.yaml  research.yaml
ebbingcontext/storage/: __init__.py  active.py  archive.py  archive_sqlite.py  warm.py  warm_chroma.py
tests/: test_adapter.py  test_chunker.py  test_classifier.py  test_cold_start.py  test_config.py  test_conflict.py  test_decay.py  test_effectiveness_budget.py  test_effectiveness_comparison.py  test_effectiveness_decay.py  test_effectiveness_semantic.py  test_embedding.py  test_engine.py  test_integration_e2e.py  test_mcp_dispatch.py  test_migration.py  test_persistence.py  test_prompt.py  test_scoring.py  test_storage_layers.py
